[package]
name = "ic-types"
version = "0.7.0"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2018"
description = "Types related to the Internet Computer Public Specification."
homepage = "https://docs.rs/ic-types"
documentation = "https://docs.rs/ic-types"
repository="https://github.com/dfinity/ic-types"
license = "Apache-2.0"
readme = "README.md"
categories = ["api-bindings", "data-structures", "no-std"]
keywords = ["internet-computer", "types", "dfinity"]
include = ["src", "Cargo.toml", "LICENSE", "README.md"]
